partnership: bugfix nowrap style for anchors

--- a/partnership/style/style.scss
+++ b/partnership/style/style.scss
@@ -44,6 +44,9 @@ button {
     flex: min-content;
     height: 100%;
 
+    .menu__list > li {
+      padding: 0;
+    }
     .menu__submenu {
       display: none;
       position: absolute;
@@ -57,6 +60,9 @@ button {
         background-color: rgb(41, 36, 33);
         text-align: left;
       }
+      a {
+        white-space: nowrap;
+      }
     }
 
     ul {
@@ -69,14 +75,13 @@ button {
       display: flex;
       align-items: center;
       text-align: center;
-      padding: 0 15px;
+      padding: 0 15px 0 0;
       min-height: 4em;
     }
     a {
       align-items: center;
-      padding: 1em 1.2em 1em 0;
+      padding: 1em 1.2em 1em 1.2em;
       width: 100%;
-      white-space: nowrap;
 
       .menu__info {
         position: relative;
